Zmiany w filtrach i liście prac dyplomowych (#1000)
Niewielkie zmiany w filtrach i liście tematów prac dyplomowych, mające na celu wprowadzenie większej klarowności w zakresie ich statusu i dostępności. Niektóre z tych zmian są efektem uwag wyrażonych przez p. prodziekan.

--- a/zapisy/apps/theses/templates/theses/thesis.html
+++ b/zapisy/apps/theses/templates/theses/thesis.html
@@ -183,7 +183,7 @@
 
         <h2 class="mt-4">Uwagi</h2>
         {% if board_member %}
-            {% if not_has_been_accepted %}
+            {% if not thesis.has_been_accepted %}
                 <h4>Edytuj swoją uwagę</h4>
                 <form action="{% url 'theses:remark_thesis' thesis.id %}" method="POST" class="post-form">
                     {% csrf_token %}
