--- a/zapisy/apps/schedule/templates/schedule/session.html
+++ b/zapisy/apps/schedule/templates/schedule/session.html
@@ -1,44 +1,3 @@
-{% extends "schedule/base.html" %}
-{% load crispy_forms_tags %}
-{% load static %}
+{% extends 'schedule/base.html' %}
 
 {% block schedule_session %} class="active"{% endblock %}
-
-{% block bread %}
-    <li class="breadcrumb-item"><a href="{% url 'main-page' %}">Strona główna</a></li>
-    <li class="breadcrumb-item"><a href="{% url 'events:classrooms' %}">Sale</a></li>
-    <li class="breadcrumb-item active" aria-current="page">Egzaminy</li>
-{% endblock %}
-
-{% block all-content %}
-    <div class="d-flex">
-        <div class="mr-auto p-0">
-            <h2>Egzaminy</h2>
-        </div>
-        <div class="p-0">
-            <a href="{% url 'events:session_feed' %}"><img src="{% static "schedule/feed-icon.png" %}" alt="RSS"></a>
-        </div>
-    </div>
-
-    <dl>
-        {% regroup exams by day as terms_list %}
-        {% for exam in terms_list %}
-            <dt><h4>{{ exam.grouper|date:"l, j E Y" }}</h4></dt>
-            {% regroup exam.list|dictsort:"event.course.name" by event.course as list %}
-            {% for ll in list %}
-                <dd>
-                    <h6><a href="{% url 'course-page' ll.grouper.slug %}">{{ ll.grouper.name }}</a></h6>
-                    <ul>
-                        {% for term in ll.list %}
-                            <li>
-                                <p>{{ term.start|time }} - {{ term.end|time }}, {% if term.room %}sala <a href="{{ term.room.get_absolute_url }}">{{ term.room.number }}</a>{% else %}{{ term.place }}{% endif %}</p>
-                            </li>
-                        {% endfor %}
-                    </ul>
-                </dd>
-        {% endfor %}
-        {% empty %}
-            <dt>Brak wyników dla zapytania</dt>
-        {% endfor %}
-    </dl>
-{% endblock %}
