--- a/zapisy/apps/schedule/templates/schedule/base.html
+++ b/zapisy/apps/schedule/templates/schedule/base.html
@@ -1,43 +1,32 @@
 {% extends "base.html" %}
 
-{% block events_active %} class="active"{% endblock %}
+{% block schedule_active %} class="active"{% endblock %}
 
 {% block main-subtitle %}Rezerwacja Sal{% endblock %}
 
 {% block system_menu %}
-    <li {% block schedule_list %}{% endblock %}>
-        <a class="nav-link" href="{% url 'events:classrooms' %}">Sale</a>
+    <li {% block schedule_calendar %}{% endblock %}>
+        <a class="nav-link" href="{% url 'schedule:calendar' %}">Sale + Wydarzenia</a>
     </li>
-    <li {% block scedule_events %}{% endblock %}>
-        <a class="nav-link" href="{% url 'events:event_show' %}">Wydarzenia</a>
-    </li>
+
     <li {% block schedule_session %}{% endblock %}>
-        <a class="nav-link" href="{% url 'events:session' %}">Egzaminy</a>
+        <a class="nav-link" href="{% url 'schedule:session' %}">Egzaminy</a>
     </li>
 
-    {% if user.is_authenticated %}
-        <li{% block schedule_reservation %}{% endblock %}>
-            <a class="nav-link" href="{% url 'events:reservation' %}">Rezerwuj</a>
-        </li>
-    {% endif %}
-    {% if perms.schedule.manage_events %}
-        <li {% block schedule_manage %}{% endblock %}>
-            <a class="nav-link" href="{% url 'events:reservations' %}">Zarządzaj</a>
-        </li>
-        <li {% block conflicts_manage %}{% endblock %}>
-            <a class="nav-link" href="{% url 'events:conflicts' %}">Konflikty</a>
-        </li>
-    {% endif %}
-    {% if user.is_authenticated %}
-        <li {% block schedule_history %}{% endblock %}>
-            <a class="nav-link" href="{% url 'events:history' %}">Historia</a>
-        </li>
-    {% endif %}
-    {% if perms.schedule.manage_events %}
-        <li {% block events_report %}{% endblock %}>
-            <a class="nav-link" href="{% url 'events:events_report' %}">Raporty</a>
-        </li>
-    {% endif %}
+    <li {% block schedule_reservation %}{% endblock %}>
+        <a class="nav-link" href="{% url 'schedule:reservation' %}">Rezerwuj</a>
+    </li>
 
+    <li {% block schedule_calendar_admin %}{% endblock %}>
+        <a class="nav-link" href="{% url 'schedule:calendar-admin' %}">Zarządzaj + Konflikty</a>
+    </li>
+
+    <li {% block schedule_history %}{% endblock %}>
+        <a class="nav-link" href="{% url 'schedule:history' %}">Historia</a>
+    </li>
+
+    <li {% block schedule_report %}{% endblock %}>
+        <a class="nav-link" href="{% url 'schedule:report' %}">Raporty</a>
+    </li>
     {# end system_menu #}
 {% endblock %}
