Konfiguracja raportowania do Rollbara (#1003)
Dzięki skonfigurowaniu 'exception_level_filters' Rollbar będzie ignorować wyjątki PermissionDenied - gdy jakiś użytkownik chciał uzyskać dostęp do zasobu, do którego nie ma uprawnień - Rollbar nie będzie już raportować tych wyjątków jako błędów.

Konfiguracja Rollbara została przeniesiona do settings.py, aby całość znajdowała się w jednym miejscu, a w pliku .env zostały tylko potrzebne do konfiguracji wpisy z przedrostkiem ROLLBAR_.

--- a/infra/playbooks/templates/env.j2
+++ b/infra/playbooks/templates/env.j2
@@ -37,5 +37,8 @@ GDRIVE_TOKEN_URI=https://oauth2.googleapis.com/token
 GDRIVE_AUTH_PROVIDER=https://www.googleapis.com/oauth2/v1/certs
 GDRIVE_CLIENT_CERT_URL={{ gdrive_client_cert_url }}
 
-ROLLBAR=access_token={{ rollbar_token }},environment={{ deploy_env }},branch={{ deploy_version }},root=/home/{{ deploy_user }}/deploy/current/zapisy/
+ROLLBAR_TOKEN={{ rollbar_token }}
+ROLLBAR_ENV={{ deploy_env }}
+ROLLBAR_BRANCH={{ deploy_version }}
+
 ARRAY_VALS={"ADMINS": [["System Zapisow", "zapisy@cs.uni.wroc.pl"]]}
