--- a/zapisy/apps/schedule/templates/schedule/report.html
+++ b/zapisy/apps/schedule/templates/schedule/report.html
@@ -1,3 +1,19 @@
 {% extends 'schedule/base.html' %}
 
 {% block schedule_report %} class="active"{% endblock %}
+
+{% block bread %}
+    <li class="breadcrumb-item"><a href="{% url 'main-page' %}">Strona główna</a></li>
+    <li class="breadcrumb-item active" aria-current="page">Wykaz zajęć</li>
+{% endblock %}
+
+{% block content %}
+<h2>{% block calendartitle %} Wykaz zajęć {% endblock %}</h2>
+{% block calendarview %}
+    <div class="alert alert-info fade show" role="alert">
+        Wybierz salę, dla której chcesz pobrać wykaz zajęć.
+    </div>
+
+    <!-- todo report -->
+{% endblock calendarview %}
+{% endblock content %}
